fix: make side-nav scrollable (#362)
- update shell.component.scss file to add scroll bar when content overflows. 
- update sidenav.component.scss to remove absolute positioned app icon and fix frequently visited links spacing.
- update sidenav.component.html to move frequently visited links heading to parent container.

Fixes: #358

--- a/src/app/core/shell/sidenav/sidenav.component.scss
+++ b/src/app/core/shell/sidenav/sidenav.component.scss
@@ -1,11 +1,9 @@
 .sidebar-full,
 .sidebar-compact {
   .navigation-panel {
-    position: absolute;
-    left: 0;
     width: 100%;
     height: 100%;
-    padding-top: 64px;
+    padding-top: 20%;
     background: hsla(0, 0%, 100%, 0.95);
   }
 
@@ -18,13 +16,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    position: fixed;
-    width: 100%;
     max-width: 15rem;
-    height: 64px;
-    line-height: 64px;
-    top: 0;
-    left: 0;
     z-index: 9999;
     color: #444;
 
@@ -96,8 +88,9 @@
 
   .app-sidenav {
     .icon-menu {
-      padding: 0 24px;
-      opacity: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
 
       .mat-divider {
         margin: 0 -24px;
@@ -171,13 +164,16 @@
       span {
         display: none;
       }
-
-      .icon-menu-item {
-        button {
-          margin: 0 0 4px 0;
-          padding: 0 20px;
-        }
-      }
+    }
+  }
+}
+.sidebar-full {
+  .navigation-panel {
+    padding-top: 5%;
+  }
+  .app-sidenav {
+    .icon-menu {
+      flex-direction: row;
     }
   }
 }
